[WIP]Ability to print console ids in xen
changed the eve script so that it takes into consideration if it is running in KVM or XEN anduses different commands to list the console ids. To do so an executable script was also added to xen-tools since this is the container that also has all the available xen specific binaries

Signed-off-by: Othonas Soultatos <othonas.s@gmail.com>

--- a/pkg/xen-tools/Dockerfile
+++ b/pkg/xen-tools/Dockerfile
@@ -135,6 +135,7 @@ RUN mv /var /var.template && ln -s /run /var && ln -s /run /var.template/run
 
 # Add a few mountpoints so we can use lowerfs in R/O mode
 RUN mkdir /persist /hostfs
-
+COPY print-xen-consoleIds /bin/print-xen-consoleIds
+RUN chmod +x /bin/print-xen-consoleIds
 ENTRYPOINT []
 CMD ["/init.sh"]
